fixed img overflow issue in about section

--- a/css/main.scss
+++ b/css/main.scss
@@ -385,7 +385,7 @@
     }
     img {
         margin-top: 1.2em;
-        width: 100%;
+        max-width: 100%;
         object-fit: cover;
         object-position: center bottom;
         mix-blend-mode: exclusion;
@@ -399,12 +399,13 @@
 
     #social {
         display: flex;
-        justify-content: safe;
+        flex-direction: column;
         margin-top: 3em;
         a {
             font-size: 1.17em;
             width: min-content;
             margin-right: 3em;
+            margin-top: 1em;
             border-color: $bg-color;
         }
     }
@@ -417,6 +418,9 @@
             grid-column: 1;
             justify-self: end;
             text-align: right;
+        }
+        #social{
+            flex-direction: row;
         }
     }
 }
